# anubis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
anubis/: __init__.py  basicio.py  matrix.py  plots.py  rnaseq.py
test/: plots.py
